// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ReduxHelpers should automate creating general promise action reducers: generatedPromiseActionReducer basic updated state 1`] = `
{
  "cancelledState": {
    "cancelled": true,
    "date": null,
    "error": false,
    "errorMessage": "",
    "fulfilled": false,
    "meta": {},
    "pending": false,
  },
  "fulfilledState": {
    "data": {
      "dolor": "sit",
      "lorem": "ipsum",
    },
    "date": "Tue, 11 Feb 2020 15:27:16 GMT",
    "error": false,
    "errorMessage": "",
    "fulfilled": true,
    "meta": {},
    "pending": false,
    "status": 200,
  },
  "pendingState": {
    "error": false,
    "errorMessage": "",
    "fulfilled": false,
    "meta": {},
    "pending": true,
  },
  "rejectedState": {
    "error": true,
    "errorMessage": "Request failed with status code 400",
    "fulfilled": false,
    "meta": {},
    "pending": false,
    "status": 400,
  },
}
`;

exports[`ReduxHelpers should automate creating promise action reducers with meta data: generatedPromiseActionReducer passed meta data 1`] = `
{
  "appliedMetaIdFulfilledState": {
    "test id": {
      "data": {
        "dolor": "sit",
        "lorem": "ipsum",
      },
      "date": "Tue, 11 Feb 2020 15:27:16 GMT",
      "error": false,
      "errorMessage": "",
      "fulfilled": true,
      "meta": {
        "data": "test data",
        "id": "test id",
        "query": {
          "test": "query",
        },
        "test": "test property",
      },
      "metaData": "test data",
      "metaId": "test id",
      "metaQuery": {
        "test": "query",
      },
      "metaTest": "test property",
      "pending": false,
      "status": 200,
    },
  },
  "fulfilledState": {
    "data": {
      "dolor": "sit",
      "lorem": "ipsum",
    },
    "date": "Tue, 11 Feb 2020 15:27:16 GMT",
    "error": false,
    "errorMessage": "",
    "fulfilled": true,
    "meta": {
      "data": "test data",
      "query": {
        "test": "query",
      },
      "test": "test property",
    },
    "metaData": "test data",
    "metaQuery": {
      "test": "query",
    },
    "metaTest": "test property",
    "pending": false,
    "status": 200,
  },
}
`;

exports[`ReduxHelpers should generate a normalized API response using a schema: array response 1`] = `
[
  [
    {
      "ipsum": 1,
      "sit": undefined,
    },
    {
      "ipsum": undefined,
      "sit": "hello world",
    },
  ],
]
`;

exports[`ReduxHelpers should generate a normalized API response using a schema: object response 1`] = `
[
  [
    {
      "ipsum": 1,
      "sit": undefined,
    },
  ],
]
`;

exports[`ReduxHelpers should generate a normalized API response using a schema: parameters 1`] = `
[
  [
    {
      "ipsum": 1,
      "sit": undefined,
    },
    {
      "ipsum": undefined,
      "sit": "hello world",
    },
  ],
  [
    {
      "ipsum": "custom value = 1",
      "sit": "custom value = undefined",
    },
    {
      "ipsum": "custom value = undefined",
      "sit": "custom value = hello world",
    },
  ],
]
`;

exports[`ReduxHelpers should generate an expected API query with an existing schema: rhsm query 1`] = `
{
  "granularity": "Daily",
}
`;

exports[`ReduxHelpers should generate an expected API response with an existing schema: array 1`] = `
[
  {
    "ipsum": undefined,
    "lorem": undefined,
  },
  {
    "hello": undefined,
    "world": undefined,
  },
]
`;

exports[`ReduxHelpers should generate an expected API response with an existing schema: object 1`] = `
[
  {
    "ipsum": undefined,
  },
  {
    "world": undefined,
  },
]
`;

exports[`ReduxHelpers should get a date from a service call response: ARRAY date 1`] = `"Fri, 07 Feb 2020 10:46:53 GMT"`;

exports[`ReduxHelpers should get a date from a service call response: date 1`] = `"Fri, 07 Feb 2020 10:46:53 GMT"`;

exports[`ReduxHelpers should get a date from a service call response: error response date 1`] = `"Tue, 11 Feb 2020 15:27:16 GMT"`;

exports[`ReduxHelpers should get a http status from a service call response: ARRAY mismatched status 1`] = `400`;

exports[`ReduxHelpers should get a http status from a service call response: ARRAY status 1`] = `200`;

exports[`ReduxHelpers should get a http status from a service call response: error response status 1`] = `403`;

exports[`ReduxHelpers should get a http status from a service call response: fallback status 1`] = `200`;

exports[`ReduxHelpers should get a http status from a service call response: missing status 1`] = `0`;

exports[`ReduxHelpers should get a http status from a service call response: status 1`] = `200`;

exports[`ReduxHelpers should get a message from a service call response: 3XX fallback message 1`] = `"Multiple Choices"`;

exports[`ReduxHelpers should get a message from a service call response: 3XX, 304 fallback message 1`] = `"Not modified"`;

exports[`ReduxHelpers should get a message from a service call response: 4XX fallback message 1`] = `"Bad Request"`;

exports[`ReduxHelpers should get a message from a service call response: 5XX fallback message 1`] = `"Internal Server Error"`;

exports[`ReduxHelpers should get a message from a service call response: ARRAY mismatched response messages 1`] = `"Request failed with status code 400"`;

exports[`ReduxHelpers should get a message from a service call response: ARRAY response for 2XX 1`] = `"OK"`;

exports[`ReduxHelpers should get a message from a service call response: ARRAY response for 4XX 1`] = `"Request failed with status code 400"`;

exports[`ReduxHelpers should get a message from a service call response: response for 2XX 1`] = `"OK"`;

exports[`ReduxHelpers should get a message from a service call response: response for 4XX 1`] = `"Request failed with status code 400"`;

exports[`ReduxHelpers should get a message from a service call response: response payload for 4XX 1`] = `"Request failed with status code 403"`;

exports[`ReduxHelpers should get data from a service call response: ARRAY data 1`] = `
[
  {
    "dolor": "sit",
    "lorem": "ipsum",
  },
  {
    "hello": "world",
  },
]
`;

exports[`ReduxHelpers should get data from a service call response: data 1`] = `
{
  "dolor": "sit",
  "lorem": "ipsum",
}
`;

exports[`ReduxHelpers should get data from a service call response: data that is an array 1`] = `
[
  {
    "lorem": "ipsum",
  },
  {
    "dolor": "sit",
  },
]
`;

exports[`ReduxHelpers should get data from a service call response: error response data 1`] = `
{
  "dolor": "sit",
  "lorem": "ipsum",
}
`;

exports[`ReduxHelpers should have specific functions: reduxHelpers 1`] = `
{
  "FULFILLED_ACTION": [Function],
  "HTTP_STATUS_RANGE": [Function],
  "PENDING_ACTION": [Function],
  "REJECTED_ACTION": [Function],
  "generatedPromiseActionReducer": [Function],
  "getDataFromResults": [Function],
  "getDateFromResults": [Function],
  "getMessageFromResults": [Function],
  "getSingleResponseFromResultArray": [Function],
  "getStatusFromResults": [Function],
  "setApiQuery": [Function],
  "setNormalizedResponse": [Function],
  "setResponseSchemas": [Function],
  "setStateProp": [Function],
  "singlePromiseDataResponseFromArray": [Function],
}
`;

exports[`ReduxHelpers should update a state object: don't reset state object 1`] = `
{
  "ipsum": false,
  "lorem": true,
}
`;

exports[`ReduxHelpers should update a state object: reset state object 1`] = `
{
  "ipsum": true,
  "lorem": true,
}
`;
